kube-prometheus-stack/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prometheus-stack-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "argocd-letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.seang.shop
    - grafana.seang.shop
    secretName: kube-prometheus-stack-tls
  rules:
  - host: prometheus.seang.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-stack-release-k-prometheus  # ✅ correct
            port:
              number: 9090
  - host: grafana.seang.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-stack-release-grafana  # ✅ correct (no k-)
            port:
              number: 80
